# Lectures

./: .gitignore
4_agent/: main.py  pyproject.toml  task.ipynb
lecture_1/: event_planner.py  mine.py  mine_extended.py  pyproject.toml
lecture_2/: branching.py  fancy.py  main.py  pyproject.toml  task.ipynb  task.py
lecture_3/: main.py  pyproject.toml  task.ipynb
lecture_4/: cycle.py  main.py  pyproject.toml  task.ipynb  task.py  task_true.py
lecture_5/: fibonachi.ipynb  fibonachi.py  fibonachi_cache.ipynb  fibonachi_cache.py  main.py  pyproject.toml
lecture_6/: main.py  my_function.py  my_funtion.ipynb  pyproject.toml
lecture_7/: class.py  complex.py  pyproject.toml  shrek_task.ipynb
lecture_8/: liner_regression.ipynb  pyproject.toml
lecture_9/: main.py  pyproject.toml  task.ipynb
lecture_A/: pyproject.toml
lecture_A/src/my_package/: __init__.py
lecture_A/src/my_package/models/: user.py
lecture_B/: .env  main.py  pyproject.toml  workflow.py
lecture_flow/: .env  main.py  pyproject.toml  task.ipynb  task11.ipynb
lecture_flow/tmp/: knowledge.json
lecture_llm_api/: .env  main.py  pyproject.toml  task.ipynb
lecture_llm_api/src/lecture_llm_api/: __init__.py  ask_model.py
promt/: main.py  pyproject.toml  task.ipynb
