[project]
name = "my_package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "pydantic[email]>=2.12.3",
    "rich>=14.2.0",
]

[project.scripts]
my_package = "my_package:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
