[project]
name = "lecture-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.21",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.128.0",
    "knowledge>=0.3",
    "lancedb>=0.26.1",
    "markdown>=3.10",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "tavily-python>=0.7.17",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pip>=25.3",
]
