[project]
name = "promt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.24",
    "ipywidgets>=8.1.8",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pip>=25.3",
]
